done with promise part
Signed-off-by: Issac Choi <chldltkrz@gmail.com>

--- a/16-Asynchronous/starter/index.html
+++ b/16-Asynchronous/starter/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="style.css" />
     <script defer src="script.js"></script>
     <script defer src="CC1.js"></script>
+    <script defer src="CC2.js"></script>
+    <script defer src="CC3.js"></script>
     <title>Asynchronous JavaScript</title>
   </head>
   <body>
